--- a/src/assets/Fonts/font.css
+++ b/src/assets/Fonts/font.css
@@ -1,11 +1,17 @@
+@font-face {
+  font-family: 'youngserif';
+  src: url('youngserif-regular.eot');
+  src: url('youngserif-regular.eot?#iefix') format('embedded-opentype'),
+        url('youngserif-regular.svg#youngserifregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
 @font-face {
-    font-family: 'youngserif';
-    src: url('youngserif-regular.eot');
-    src: url('youngserif-regular.eot?#iefix') format('embedded-opentype'),
-         url('youngserif-regular.svg#youngserifregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: 'Renogare Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Renogare Regular'), url('Renogare-Regular.woff') format('woff');
 }
