finish layout shop

--- a/src/assets/Fonts/font.css
+++ b/src/assets/Fonts/font.css
@@ -9,6 +9,151 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
+@import url('https://use.typekit.net/ayd7xnr.css');
+
+/* Myriad Pro Bold */
+
+/* font-family: myriad-pro, sans-serif;
+
+font-weight: 700;
+
+font-style: normal;
+
+
+Myriad Pro Bold Italic
+
+font-family: myriad-pro, sans-serif;
+
+font-weight: 700;
+
+font-style: italic;
+
+
+Myriad Pro Italic
+
+font-family: myriad-pro, sans-serif;
+
+font-weight: 400;
+
+font-style: italic;
+
+
+Myriad Pro Regular
+
+font-family: myriad-pro, sans-serif;
+
+font-weight: 400;
+
+font-style: normal;
+
+
+Myriad Pro Bold Condensed
+
+font-family: myriad-pro-condensed, sans-serif;
+
+font-weight: 700;
+
+font-style: normal;
+
+
+Myriad Pro Condensed
+
+font-family: myriad-pro-condensed, sans-serif;
+
+font-weight: 400;
+
+font-style: normal;
+
+
+Myriad Pro Bold Condensed Italic
+
+font-family: myriad-pro-condensed, sans-serif;
+
+font-weight: 700;
+
+font-style: italic;
+
+
+Myriad Pro Condensed Italic
+
+font-family: myriad-pro-condensed, sans-serif;
+
+font-weight: 400;
+
+font-style: italic;
+
+
+Myriad Pro Bold SemiCondensed
+
+font-family: myriad-pro-semi-condensed, sans-serif;
+
+font-weight: 700;
+
+font-style: normal;
+
+
+Myriad Pro SemiCondensed
+
+font-family: myriad-pro-semi-condensed, sans-serif;
+
+font-weight: 400;
+
+font-style: normal;
+
+
+Myriad Pro SemiCondensed Italic
+
+font-family: myriad-pro-semi-condensed, sans-serif;
+
+font-weight: 400;
+
+font-style: italic;
+
+
+Myriad Pro Bold SemiCondensed Italic
+
+font-family: myriad-pro-semi-condensed, sans-serif;
+
+font-weight: 700;
+
+font-style: italic;
+
+
+Myriad Pro SemiExtended Italic
+
+font-family: myriad-pro-semiextended, sans-serif;
+
+font-weight: 400;
+
+font-style: italic;
+
+
+Myriad Pro SemiExtended
+
+font-family: myriad-pro-semiextended, sans-serif;
+
+font-weight: 400;
+
+font-style: normal;
+
+
+Myriad Pro Bold SemiExtended Italic
+
+font-family: myriad-pro-semiextended, sans-serif;
+
+font-weight: 700;
+
+font-style: italic;
+
+
+Myriad Pro Bold SemiExtended
+
+font-family: myriad-pro-semiextended, sans-serif;
+
+font-weight: 700;
+
+font-style: normal; */
+
 @font-face {
   font-family: 'Renogare Regular';
   font-style: normal;
