--- a/src/assets/Fonts/font.css
+++ b/src/assets/Fonts/font.css
@@ -7,6 +7,8 @@
   font-style: normal;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
 @import url('https://use.typekit.net/ayd7xnr.css');
