--- a/src/assets/css/animation.css
+++ b/src/assets/css/animation.css
@@ -1,9 +1,9 @@
-.fade-enter {
-  opacity: 0;
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
 }
 
-.fade-enter-active {
-  transition: opacity 1s ease;
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
 }
 
 .people-enter {
